--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* @import '../node_modules/@angular/material/theming';
+@include mat-core();
+
+$light-app-theme: mat-light-theme((
+        color: (
+                primary: mat-palette($mat-indigo),
+                accent: mat-palette($mat-pink, A200, A100, A400),
+                warn: mat-palette($mat-red),
+        )
+));
+
+$dark-app-theme:   mat-dark-theme((
+        color: (
+                primary: mat-palette(#303030),
+                accent: mat-palette($mat-blue-gray, A200, A100, A400),
+                warn: mat-palette($mat-amber),
+        )
+));
+
+@include angular-material-theme($light-app-theme);
+
+.dark-theme {
+  @include angular-material-color($dark-app-theme);
+}
+ */
