Interações com os cards

--- a/src/app/home/menu-card/menu-card.component.html
+++ b/src/app/home/menu-card/menu-card.component.html
@@ -4,7 +4,7 @@
           <mat-card-title>{{element}}</mat-card-title>
           <mat-card-subtitle>Subtitle</mat-card-subtitle>
       </mat-card-header>
-      <img matCardImage src="Card wide image source">
+      <img matCardImage alt="{{element}} Icon" src="Card wide image source">
       <mat-card-content>
           Text content
       </mat-card-content>
