--- a/src/app/home/menu-card/menu-card.component.scss
+++ b/src/app/home/menu-card/menu-card.component.scss
@@ -10,4 +10,9 @@ mat-card{
   mat-card-title{
     text-align: center;
   }
+  transition: all .3s ease;
+}
+mat-card:hover{
+    cursor: pointer;
+    scale: 1.1;
 }
