Rotas filhas concertadas

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -23,6 +23,7 @@
       </app-theme-picker>
     </mat-toolbar>
     <!-- Add Content Here -->
-    <app-menu-card></app-menu-card>
+    <!--<app-menu-card></app-menu-card>-->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
