--- a/src/app/home/menu-card/menu-card.component.html
+++ b/src/app/home/menu-card/menu-card.component.html
@@ -9,7 +9,7 @@
           Text content
       </mat-card-content>
       <mat-card-actions align="start">
-          <button mat-button>Action1</button>
+          <button [routerLinkActive]="'active'" mat-button>Action1</button>
 
       </mat-card-actions>
       <mat-card-footer>
