--- a/src/app/patrimonios/patrimonios-home/patrimonios-home.component.scss
+++ b/src/app/patrimonios/patrimonios-home/patrimonios-home.component.scss
@@ -7,12 +7,13 @@ mat-card{
   margin: 4rem;
   width : 15rem;
   height: 15rem;
-  mat-card-title{
-    text-align: center;
-  }
   transition: all .3s ease;
+  mat-card-title{
+    color:red;
+  }
 }
 mat-card:hover{
     cursor: pointer;
-    scale: 1.1;
+    scale: 1.2;
 }
+
