--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -1,11 +1,17 @@
+.grid-center{
+  display: grid;
+  place-items: center;
+}
+
 mat-card{
   max-width         : 400px;
-  text-align        : center;
-  position          : absolute;
-  top               : 50%;
-  left              : 50%;
-  -webkit-transform : translate(-50%, -50%);
-  transform         : translate(-50%, -50%);
+
+  //text-align        : center;
+ // position          : absolute;
+ // top               : 50%;
+  //left              : 50%;
+  //-webkit-transform : translate(-50%, -50%);
+  //transform         : translate(-50%, -50%);
 }
 
 mat-card mat-card-title{
