Titulo dos cards de patrimonio centralizados

--- a/src/app/patrimonios/patrimonios-home/patrimonios-home.component.scss
+++ b/src/app/patrimonios/patrimonios-home/patrimonios-home.component.scss
@@ -8,6 +8,7 @@ mat-card{
   width : 15rem;
   height: 15rem;
   transition: all .3s ease;
+  align-items: center;
   mat-card-title{
     color:red;
   }
