--- a/src/app/home/menu-card/menu-card.component.scss
+++ b/src/app/home/menu-card/menu-card.component.scss
@@ -1,18 +1,16 @@
 #spacer-cards{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display         : flex;
+  flex-wrap       : wrap;
+  justify-content : center;
 }
 mat-card{
-  margin: 4rem;
-  width : 15rem;
-  height: 15rem;
-  mat-card-title{
-    text-align: center;
-  }
-  transition: all .3s ease;
+  margin      : 4rem;
+  width       : 15rem;
+  height      : 15rem;
+  align-items : center;
+  transition  : all .3s ease;
 }
 mat-card:hover{
-    cursor: pointer;
-    scale: 1.1;
+    cursor  : pointer;
+    scale   : 1.2;
 }
