--- a/src/app/patrimonios/patrimonios-home/patrimonios-home.component.html
+++ b/src/app/patrimonios/patrimonios-home/patrimonios-home.component.html
@@ -1,9 +1,1 @@
-<div id="spacer-cards">
-  <mat-card *ngFor="let element of menucard_patrimonios_list" >
-      <mat-card-header>
-        <div style="text-align:center;">
-          <mat-card-title>{{element}}</mat-card-title>
-        </div>
-      </mat-card-header>
-  </mat-card>
-</div>
+<router-outlet></router-outlet>
